# furai

./: README.md
cmake/: android.toolchain.cmake  dependencies  nacl.toolchain.cmake
sourcetree/: CMakeLists.txt
sourcetree/GLES22/: gl2.h
sourcetree/furai/: CMakeLists.txt
sourcetree/furai/backends/: CMakeLists.txt
sourcetree/furai/backends/android/: CMakeLists.txt  main.cpp
sourcetree/furai/backends/android/core/: AndroidApplication.cpp  AndroidApplication.h  AndroidClock.cpp  AndroidClock.h  AndroidFullWindowListener.h  AndroidLog.cpp  AndroidLog.h  AndroidWindow.cpp  AndroidWindow.h  AndroidWindowListener.h  CMakeLists.txt  config.h
sourcetree/furai/backends/android/core/jniglue/: CMakeLists.txt  MyCycle.h  android_main.cpp  furai_android_native_app_glue.cpp  jniglue.cpp  main.cpp
sourcetree/furai/backends/android/jniglue/: CMakeLists.txt  furai_android_native_app_glue.cpp  furai_android_native_app_glue.h
sourcetree/furai/backends/android/log/: AndroidLog.cpp  AndroidLog.h  CMakeLists.txt
sourcetree/furai/backends/android/storage/: AndroidFileSystem.cpp  AndroidFileSystem.h  AndroidInternalFile.cpp  AndroidInternalFile.h  CMakeLists.txt
sourcetree/furai/backends/nacl/: CMakeLists.txt
sourcetree/furai/backends/nacl/core/: CMakeLists.txt  NaClApplication.cpp  NaClApplication.h  NaClClock.cpp  NaClClock.h  NaClFurai.cpp  NaClFurai.h  NaClLog.cpp  NaClLog.h  NaClLogEnvVars.cpp  NaClLogEnvVars.h  NaClLogJSConsole.cpp  NaClLogJSConsole.h  NaClModule.cpp  NaClModule.h  NaClWindow.cpp  NaClWindow.h
sourcetree/furai/backends/nacl/core/mainthreadcalls/: CMakeLists.txt  NaClMainThreadCalls.cpp  NaClMainThreadCalls.h
sourcetree/furai/backends/nacl/exe/: CMakeLists.txt  HelloTri.h  NaClExe.cpp
sourcetree/furai/backends/nacl/graphics/: CMakeLists.txt
sourcetree/furai/backends/nacl/graphics/GLES2/: CMakeLists.txt  gl2.cpp  gl2.h
sourcetree/furai/backends/nacl/storage/: CMakeLists.txt  NaClFileSystem.cpp  NaClFileSystem.h  NaClInternalFile.cpp  NaClInternalFile.h
sourcetree/furai/core/: Activity.h  Application.h  ApplicationListener.h  CMakeLists.txt  Clock.h  Furai.cpp  Furai.h  Log.h  Window.h  WindowListener.h
sourcetree/furai/graphics/: CMakeLists.txt  EGLConfigChooser.cpp  EGLConfigChooser.h  EGLUtils.cpp  EGLUtils.h
sourcetree/furai/log/: Log.h
sourcetree/furai/storage/: CMakeLists.txt  File.cpp  File.h  FileSystem.cpp  FileSystem.h  InternalFile.cpp  InternalFile.h
tests_apps/android/hellotriangle/: AndroidHelloTriangle.h  AndroidManifest.xml  CMakeLists.txt  HelloTriangle.h  android_main.cpp
tests_apps/android/hellotriangle/cmake/: CMakeLists.txt  android_main.cpp
tests_apps/android/hellotriangle/jni/: Android.mk  HelloTriangle.h  MyCycle.h  android_main.cpp
tests_apps/android/hellotriangle/res/values/: strings.xml
